Fixing issues with styling, overlapping elements

--- a/client/src/pages/ShowPage/styles.css
+++ b/client/src/pages/ShowPage/styles.css
@@ -61,7 +61,6 @@
     margin: 30px 10px;
     background-color: white;
     padding: 5px;
-    width: 60%;
     padding: 20px;
     max-width: 1000px;
    
