--- a/client/src/react-components/CommentSection/styles.css
+++ b/client/src/react-components/CommentSection/styles.css
@@ -6,7 +6,7 @@
 
 .comment-section-container {
     float:right;
-    width: 35%;
+    width: 400px;
     margin-top: 25px;
     margin-right: 10px;
 
